# K-State-Prostetic-Hand

./: .gitignore  README.md
Testing/MyoWare1/: results.md
debounce/: README.md  debounce.ino
debounce_rust/: Cargo.toml
debounce_rust/src/: main.rs
debouncer_rust/: Cargo.toml  README.md  Ravedude.toml
debouncer_rust/lib/: millis.rs
debouncer_rust/src/: main.rs
voltage_graph/: Cargo.toml
voltage_graph/src/: main.rs
