[package]
name = "debouncer_rust"
version = "0.1.0"
authors = ["Drake Morgan <drake@morgancomputers.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "debouncer_rust"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
num-traits = { version = "0.2.19", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.7"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
